refactor : 언어 플러그인 변경
1. flutter_localizations -> easy_localization 으로 변경

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,7 @@ dependencies:
   get_it: ^7.2.0
   path_provider: ^2.0.13
   flutter_easyloading: ^3.0.5
-  freezed: ^2.3.2
-  flutter_localizations:
-    sdk: flutter
+  freezed: ^2.3.2  
   intl: any
   font_awesome_flutter: ^10.4.0
   sqflite: ^2.2.6
@@ -54,6 +52,7 @@ dependencies:
   markdown: ^7.0.2
   flutter_launcher_icons: ^0.13.1
   package_info_plus: ^3.1.2
+  easy_localization: ^3.0.2
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +76,10 @@ flutter:
   uses-material-design: true
   generate: true # Add this line
 
+   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/translations/
+
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
@@ -94,16 +97,6 @@ flutter_launcher_icons:
   macos:
     generate: true
     image_path: "assets/icon/icon.png"
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
