--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   go_router: ^6.2.0
   flutter_bloc: ^8.1.2
   hydrated_bloc: ^9.1.0
-  equatable: ^2.0.5
+  
   get_it: ^7.2.0
   path_provider: ^2.0.13
   flutter_easyloading: ^3.0.5
@@ -46,13 +46,16 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   sqflite: ^2.2.6
   uuid: ^3.0.7
-  dart_openai: ^1.8.4
+  
   markdown_widget: ^2.1.0
   flutter_math_fork: ^0.7.1
   markdown: ^7.0.2
   flutter_launcher_icons: ^0.13.1
   package_info_plus: ^3.1.2
   easy_localization: ^3.0.2
+
+  # OpenAI
+  dart_openai: ^1.8.4
 
   # Freezed
   freezed: ^2.3.4
