--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   flutter_bloc: ^8.1.2
   hydrated_bloc: ^9.1.0
   
-  get_it: ^7.2.0
   path_provider: ^2.0.13
   flutter_easyloading: ^3.0.5
 
@@ -60,6 +59,7 @@ dependencies:
   # Freezed
   freezed: ^2.3.4
   freezed_annotation: ^2.2.0
+  country_picker: ^2.0.20
 
 dev_dependencies:
   flutter_test:
