--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,8 @@ jobs:
       - run: flutter build apk
       - uses: actions/upload-artifact@v3
         with:
-          name: flutter_chat_box.apk
+          # name: flutter_chat_box.apk
+          name: app-release.apk
           path: "build/app/outputs/apk/release/*.apk"
 
   build-ios:
