--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,11 @@ dependencies:
   # Freezed
   freezed: ^2.3.4
   freezed_annotation: ^2.2.0
+
+  
   country_picker: ^2.0.20
+  flutter_keyboard_visibility: ^5.4.1
+  async: ^2.11.0
 
 dev_dependencies:
   flutter_test:
